@@ -1,3 +1,9 @@
+19 January 2009: Matthijs
+	- Bug 230: nsd-*: use stdout for non-error output (instead of stderr).
+
+17 January 2009: Jelte
+	- Fix file rotation when no logfile but chroot.
+
 8 January 2009: Matthijs
 	- New nsd-patch option -o dbfile (set output.db)
 	- update nsdc to deal with the new nsd-patch options
